# renogy-ha

./: .gitignore  CHANGELOG.md  FUNDING.yml  LICENSE  README.md  hacs.json  plan.md  pyproject.toml  spec.md  todo.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
custom_components/renogy/: __init__.py  ble.py  config_flow.py  manifest.json  sensor.py
custom_components/renogy/translations/: en.json
custom_components/renogy_ha/: __init__.py  ble.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
tests/: test_ble.py  test_device.py  test_integration.py  test_sensor.py
tests/mocks/: ha_bluetooth.py  ha_coordinator.py  ha_device.py  ha_sensor.py
