[project]
name = "renogy-ha"
version = "0.0.0"
description = "Home Assisstant integration for Renogy devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=0.22.3",
    "homeassistant>=2025.3.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "renogy-ble>=0.1.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "asyncio: mark test as an asyncio coroutine",
]
asyncio_default_fixture_loop_scope = "function"

[tool.semantic_release]
version_files = ["manifest.json"]
version_regex = '''"version":\s*"(\d+\.\d+\.\d+)"'''
