[project]
name = "renogy-ha"
version = "0.2.7"
description = "Home Assisstant integration for Renogy devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=0.22.3",
    "bleak-retry-connector>=3.9.0",
    "homeassistant>=2025.4.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "renogy-ble>=0.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "asyncio: mark test as an asyncio coroutine",
]
asyncio_default_fixture_loop_scope = "function"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["custom_components/renogy/manifest.json:version"]
